--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -22,11 +22,11 @@
 
     <div class="row">
       <div class="card">
-        <h2 class="title">Altura x Tempo</h2>
+        <h2 class="title">Tempo x Altura</h2>
         <img class="image" src="" alt="" />
         </p>
         <form>
-          <input  class="label_num" type="number">
+          <input placeholder="Digite o valor de tempo" class="label_num" type="number">
 
           <select  class="seletor" name="funcao">
             <option value="exp">Exponencial</option>
@@ -40,10 +40,10 @@
       </div>
 
       <div class="card">
-        <h2 class="title">Altura x Volume</h2>
+        <h2 class="title">Tempo x Volume</h2>
         <img class="image" src=""  />
         <form>
-          <input  class="label_num" type="number">
+          <input placeholder="Digite o valor de tempo" class="label_num" type="number">
 
           <select  class="seletor" name="funcao">
             <option value="exp">Exponencial</option>
@@ -60,7 +60,7 @@
         <h2 class="title">Retângulo</h2>
         <img class="image" src="" />
         <form>
-          <input  class="label_num" type="number">
+          <input placeholder="Digite o valor da area" class="label_num" type="number">
 
           <select  class="seletor" name="funcao">
             <option value="exp">Exponencial</option>
