--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -4,7 +4,7 @@
 
 <head charset="UTF-8">
   <meta name="viewport" content="width=width-devide, initial-scale=1.0">
-  <title>TecGames</title>
+  <title>Trabalho Cálculo</title>
   <link rel="stylesheet" href="/Calc/Codigo/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +35,7 @@
           </select>
 
           <input class="btn-card" type="submit" value="Calcular" />
+          <input class="btn-card" type="reset" value="Redefinir">
 
         </form>
       </div>
@@ -52,6 +53,7 @@
           </select>
 
           <input class="btn-card" type="submit" value="Calcular" />
+          <input class="btn-card" type="reset" value="Redefinir">
 
         </form>
       </div>
@@ -69,6 +71,7 @@
           </select>
 
           <input class="btn-card" type="submit" value="Calcular" />
+          <input class="btn-card" type="reset" value="Redefinir">
 
         </form>
       </div>
