Adicionado TempoxAltura e TempoxVolume

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -46,16 +46,16 @@
         <h2 class="title">Tempo x Volume</h2>
         <img class="image" src=""  />
         <form>
-          <input placeholder="Digite o valor de tempo" class="label_num" type="number">
+          <input placeholder="Digite o valor de tempo" id="tempo_2" class="label_num" type="number">
 
-          <select  class="seletor" name="funcao">
+          <select  class="seletor" id="funcao_2"name="funcao2">
             <option value="exp">Exponencial</option>
             <option value="quad">Quadrática</option>
             <option value="line">Linear</option>
           </select>
 
           <div class="container_btn">
-            <input class="btn-card" type="submit" value="Calcular" />
+            <input class="btn-card" type="submit" id="calcular_2" value="Calcular" />
             <input  type="reset"  id="redefinir_btn"value="Redefinir">
           </div>
 
