--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -66,16 +66,16 @@
         <h2 class="title">Retângulo</h2>
         <img class="image" src="" />
         <form>
-          <input placeholder="Digite o valor da area" class="label_num" type="number">
+          <input id="lado1"placeholder="Digite o valor de x" class="label_num" type="number">
 
-          <select  class="seletor" name="funcao">
-            <option value="exp">Exponencial</option>
-            <option value="quad">Quadrática</option>
-            <option value="line">Linear</option>
+          <select   id="funcao3"class="seletor" name="funcao">
+            <option value="AC">Área constante</option>
+            <option value="PC">Perímetro constante</option>
+           
           </select>
 
           <div class="container_btn">
-            <input class="btn-card" type="submit" value="Calcular" />
+            <input id="calcular3"class="btn-card" type="submit" value="Calcular" />
             <input  type="reset"  id="redefinir_btn"value="Redefinir">
           </div>
 
